share_perl5dir	  = $(datarootdir)/perl5/Vyatta
bin_sudo_usersdir = $(bindir)/sudo-users
curverdir         = $(sysconfdir)/config-migrate/current
etc_initdir = /etc/init.d/

cpiop = find  . ! -regex '\(.*~\|.*\.bak\|.*\.swp\|.*\#.*\#\)' -print0 | \
  cpio -0pd

install-exec-hook:
#	mkdir -p $(DESTDIR)$(cfgdir)
#	cd templates-cfg; $(cpiop) $(DESTDIR)$(cfgdir)
#	mkdir -p $(DESTDIR)$(opdir)
#	cd templates-op; $(cpiop) $(DESTDIR)$(opdir)
